# acc-cpuc

./: .gitignore  .pre-commit-config.yaml  README.md  README_for_zip.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: testing.yml
data/processed/07012023_staff_proposal/: price_bounds.csv  resource_data.csv
data/processed/2024ACC_SCT_Base/: price_bounds.csv
data/processed/2024ACC_SCT_High/: price_bounds.csv  resource_data.csv
data/processed/2024ACC_TRC/: price_bounds.csv
docs/source/: conf.py  index.rst  setup.rst  src.rst  src.ui.rst
results/07012023_staff_proposal/: avoided_costs.csv  cash_flow_by_resource.csv  npv_by_resource.csv
results/2024ACC_SCT_Base/: avoided_costs.csv  cash_flow_by_resource.csv  npv_by_resource.csv
results/2024ACC_SCT_High/: avoided_costs.csv  cash_flow_by_resource.csv  npv_by_resource.csv
results/2024ACC_TRC/: avoided_costs.csv  cash_flow_by_resource.csv  npv_by_resource.csv
src/: acc.py  main.py
src/ui/: make_dataset.py
src/visualization/: visualize.py
tests/: test_main.py
tests/test_ui/: test_make_dataset.py
